20050827:
	- Various cleanups and killing unused variables
20050826:
	- Committed initial version
	- Misc fixes
	- Bug with pdu_len in blkparse.c, rewrote to index in rbtree and
	  ditch usage of qsort()