@@ -1,12 +1,21 @@
 CC	= gcc
-CFLAGS	= -Wall -O2 -D_GNU_SOURCE
+CFLAGS	= -Wall -g -D_GNU_SOURCE
 PROG	= blkparse blktrace
-TRACE_LIBS = -lpthread
+LIBS	= -lpthread
 
 all: $(PROG)
 
 blkparse: blkparse.o rbtree.o
-blktrace: blktrace.o $(TRACE_LIBS)
+blktrace: blktrace.o $(LIBS)
 
 clean:
 	-rm -f *.o $(PROG)
+
+INSTALL = install
+prefix = /usr/local
+bindir = $(prefix)/bin
+
+install: $(PROG)
+	$(INSTALL) -m755 -d $(DESTDIR)$(bindir)
+	$(INSTALL) $(PROG) $(DESTDIR)$(bindir)
+
